# feeds-service

./: CMakeLists.txt
src/: CMakeLists.txt  main.c  rpc.c  rpc.h
src/feeds_client/: feeds_cli.c  feeds_client.c  feeds_client.h  tsx.c  tsx.h
tests/: CMakeLists.txt  cfg.c  cfg.h  launcher.c  main.c  robot.c  test.c  tests.conf
tests/suites/: feeds_suite.c  feeds_suite.h  suites.h
